[package]
name = "compact_jwt"
version = "0.2.9"
edition = "2021"
authors = ["William Brown <william@blackhats.net.au>"]
description = "Minimal implementation of JWT for OIDC"
repository = "https://github.com/kanidm/compact_jwt"
readme = "README.md"
keywords = ["jwt", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[features]
unsafe_release_without_verify = []
default = ["openssl"]
openssl = ["dep:openssl", "const-oid", "p256", "rand_core", "rsa", "sha2", "x509-cert"]

[dependencies]
serde = { version = "^1.0.136", features = ["derive"] }
serde_json = "^1.0.79"
base64 = "^0.13.0"
base64urlsafedata = "0.1.0"
openssl = { version = "^0.10.38", optional = true }
url = { version = "^2.2.2", features = ["serde"] }
uuid = { version = "^1.0.0", features = ["serde"] }
tracing = "^0.1.34"

hex = "0.4"
p256 = { version = "0.13", features = ["jwk"], optional = true }
x509-cert = { version = "0.2", optional = true }
const-oid = { version = "0.9", features = ["db"], optional = true }
rsa = { version = "0.9", optional = true }
sha2 = { version = "0.10", features = ["oid"], optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }

[dev-dependencies]
tracing-subscriber = "^0.3.11"
